fix: /confirm/copytocalendar 명세 논의한대로 수정 + /calendar/scheduleinfo에서 약속에서 연결된 일정일 경우 약속코드 주도록 수정 feat: /confirm/cancel 추가
